--- a/teamdisplay.html
+++ b/teamdisplay.html
@@ -9,171 +9,165 @@
 <body>
     <div class="container">
         <div class="team-grid">
-            <!-- Team Member 1 -->
-            <div class="team-member">
-                <div class="member-card">
-                    <div class="member-front">
-                        <img class=hashim src="github_profile.jpg" alt="Team Member 1">
-                        <div class="hover-info">
-                            <h3>Team Member 1</h3>
-                            <p>Frontend Developer</p>
-                        </div>
+            <!-- Team Member Card -->
+            <div class="profile-card">
+                <div class="profile-content">
+                    <div class="profile-image">
+                        <img src="github_profile.jpg" alt="Team Member 1">
                     </div>
-                    <div class="member-details">
-                        <h3>Team Member 1</h3>
-                        <h4>Skills</h4>
-                        <ul>
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
-                        </ul>
-                        <h4>Projects</h4>
-                        <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
-                        </ul>
-                        <button class="close-details">Close</button>
+                    <div class="profile-info">
+                        <h3>Hashim Mohamed T A</h3>
+                        <p class="role">Frontend Developer</p>
+                        <div class="hover-content">
+                            <p class="brief-bio">Passionate developer</p>
+                            <div class="quick-skills">
+                                <span>React</span>
+                                <span>TypeScript</span>
+                                <span>Node.js</span>
+                            </div>
+                            <button class="view-profile"><a href="profile.html">Full Profile</a></button>
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- Repeat for other team members -->
+        </div>
+        <div class="team-member">
+            <div class="member-card">
+                <div class="member-front">
+                    <img class=hashim src="github_profile.jpg" alt="Team Member 1">
+                    <div class="hover-info">
+                        <h3>Team Member 1</h3>
+                        <p>Frontend Developer</p>
+                    </div>
+                </div>
+                <div class="member-details">
+                    <h3>Team Member 1</h3>
+                    <h4>Skills</h4>
+                    <ul>
+                        <li>HTML/CSS</li>
+                        <li>JavaScript</li>
+                        <li>React</li>
+                    </ul>
+                    <h4>Projects</h4>
+                    <ul>
+                        <li>Project 1</li>
+                        <li>Project 2</li>
+                    </ul>
+                    <button class="close-details">Close</button>
+                </div>
+            </div>
+        </div>
 
-            <div class="team-member">
-                <div class="member-card">
-                    <div class="member-front">
-                        <img class=hashim src="github_profile.jpg" alt="Team Member 1">
-                        <div class="hover-info">
-                            <h3>Team Member 1</h3>
-                            <p>Frontend Developer</p>
-                        </div>
-                    </div>
-                    <div class="member-details">
+        <div class="team-member">
+            <div class="member-card">
+                <div class="member-front">
+                    <img class=hashim src="github_profile.jpg" alt="Team Member 1">
+                    <div class="hover-info">
                         <h3>Team Member 1</h3>
-                        <h4>Skills</h4>
-                        <ul>
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
-                        </ul>
-                        <h4>Projects</h4>
-                        <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
-                        </ul>
-                        <button class="close-details">Close</button>
+                        <p>Frontend Developer</p>
                     </div>
                 </div>
+                <div class="member-details">
+                    <h3>Team Member 1</h3>
+                    <h4>Skills</h4>
+                    <ul>
+                        <li>HTML/CSS</li>
+                        <li>JavaScript</li>
+                        <li>React</li>
+                    </ul>
+                    <h4>Projects</h4>
+                    <ul>
+                        <li>Project 1</li>
+                        <li>Project 2</li>
+                    </ul>
+                    <button class="close-details">Close</button>
+                </div>
             </div>
+        </div>
 
-            <div class="team-member">
-                <div class="member-card">
-                    <div class="member-front">
-                        <img class=hashim src="github_profile.jpg" alt="Team Member 1">
-                        <div class="hover-info">
-                            <h3>Team Member 1</h3>
-                            <p>Frontend Developer</p>
-                        </div>
-                    </div>
-                    <div class="member-details">
+        <div class="team-member">
+            <div class="member-card">
+                <div class="member-front">
+                    <img class=hashim src="github_profile.jpg" alt="Team Member 1">
+                    <div class="hover-info">
                         <h3>Team Member 1</h3>
-                        <h4>Skills</h4>
-                        <ul>
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
-                        </ul>
-                        <h4>Projects</h4>
-                        <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
-                        </ul>
-                        <button class="close-details">Close</button>
+                        <p>Frontend Developer</p>
                     </div>
                 </div>
+                <div class="member-details">
+                    <h3>Team Member 1</h3>
+                    <h4>Skills</h4>
+                    <ul>
+                        <li>HTML/CSS</li>
+                        <li>JavaScript</li>
+                        <li>React</li>
+                    </ul>
+                    <h4>Projects</h4>
+                    <ul>
+                        <li>Project 1</li>
+                        <li>Project 2</li>
+                    </ul>
+                    <button class="close-details">Close</button>
+                </div>
             </div>
+        </div>
 
-            <div class="team-member">
-                <div class="member-card">
-                    <div class="member-front">
-                        <img class=hashim src="github_profile.jpg" alt="Team Member 1">
-                        <div class="hover-info">
-                            <h3>Team Member 1</h3>
-                            <p>Frontend Developer</p>
-                        </div>
-                    </div>
-                    <div class="member-details">
+        <div class="team-member">
+            <div class="member-card">
+                <div class="member-front">
+                    <img class=hashim src="github_profile.jpg" alt="Team Member 1">
+                    <div class="hover-info">
                         <h3>Team Member 1</h3>
-                        <h4>Skills</h4>
-                        <ul>
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
-                        </ul>
-                        <h4>Projects</h4>
-                        <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
-                        </ul>
-                        <button class="close-details">Close</button>
+                        <p>Frontend Developer</p>
                     </div>
                 </div>
+                <div class="member-details">
+                    <h3>Team Member 1</h3>
+                    <h4>Skills</h4>
+                    <ul>
+                        <li>HTML/CSS</li>
+                        <li>JavaScript</li>
+                        <li>React</li>
+                    </ul>
+                    <h4>Projects</h4>
+                    <ul>
+                        <li>Project 1</li>
+                        <li>Project 2</li>
+                    </ul>
+                    <button class="close-details">Close</button>
+                </div>
             </div>
+        </div>
 
-            <div class="team-member">
-                <div class="member-card">
-                    <div class="member-front">
-                        <img class=hashim src="github_profile.jpg" alt="Team Member 1">
-                        <div class="hover-info">
-                            <h3>Team Member 1</h3>
-                            <p>Frontend Developer</p>
-                        </div>
-                    </div>
-                    <div class="member-details">
+        <div class="team-member">
+            <div class="member-card">
+                <div class="member-front">
+                    <img class=hashim src="github_profile.jpg" alt="Team Member 1">
+                    <div class="hover-info">
                         <h3>Team Member 1</h3>
-                        <h4>Skills</h4>
-                        <ul>
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
-                        </ul>
-                        <h4>Projects</h4>
-                        <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
-                        </ul>
-                        <button class="close-details">Close</button>
+                        <p>Frontend Developer</p>
                     </div>
                 </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-card">
-                    <div class="member-front">
-                        <img class=hashim src="github_profile.jpg" alt="Team Member 1">
-                        <div class="hover-info">
-                            <h3>Team Member 1</h3>
-                            <p>Frontend Developer</p>
-                        </div>
-                    </div>
-                    <div class="member-details">
-                        <h3>Team Member 1</h3>
-                        <h4>Skills</h4>
-                        <ul>
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
-                        </ul>
-                        <h4>Projects</h4>
-                        <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
-                        </ul>
-                        <button class="close-details">Close</button>
-                    </div>
+                <div class="member-details">
+                    <h3>Team Member 1</h3>
+                    <h4>Skills</h4>
+                    <ul>
+                        <li>HTML/CSS</li>
+                        <li>JavaScript</li>
+                        <li>React</li>
+                    </ul>
+                    <h4>Projects</h4>
+                    <ul>
+                        <li>Project 1</li>
+                        <li>Project 2</li>
+                    </ul>
+                    <button class="close-details">Close</button>
                 </div>
             </div>
-            <!-- Repeat similar structure for other team members -->
         </div>
     </div>
-    <script src="scripts.js"></script>
+</div>
+<script src="scripts.js"></script>
 </body>
 </html>
