--- a/teamdisplay.html
+++ b/teamdisplay.html
@@ -15,7 +15,7 @@
                     <div class="member-front">
                         <img class=hashim src="github_profile.jpg" alt="Team Member 1">
                         <div class="hover-info">
-                            <h3>Team Member 1</h3>
+                            <h3>Hashim Vava</h3>
                             <p>Frontend Developer</p>
                         </div>
                     </div>
@@ -29,8 +29,8 @@
                         </ul>
                         <h4>Projects</h4>
                         <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
+                            <li>FYV</li>
+                            <li>MISSFIT</li>
                         </ul>
                         <button class="close-details">Close</button>
                     </div>
@@ -40,9 +40,9 @@
             <div class="team-member">
                 <div class="member-card">
                     <div class="member-front">
-                        <img class=hashim src="github_profile.jpg" alt="Team Member 1">
+                        <img class=hashim src="khansa.jpg" alt="Team Member 1">
                         <div class="hover-info">
-                            <h3>Team Member 1</h3>
+                            <h3>KHANSA KUTTI</h3>
                             <p>Frontend Developer</p>
                         </div>
                     </div>
@@ -50,14 +50,14 @@
                         <h3>Team Member 1</h3>
                         <h4>Skills</h4>
                         <ul>
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
+                            <li>HTMLS</li>
+                            <li>python</li>
+                            <li>c++</li>
                         </ul>
                         <h4>Projects</h4>
                         <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
+                            <li>Simple desktop calc.</li>
+                            <li>Hello worldin html</li>
                         </ul>
                         <button class="close-details">Close</button>
                     </div>
@@ -67,9 +67,9 @@
             <div class="team-member">
                 <div class="member-card">
                     <div class="member-front">
-                        <img class=hashim src="github_profile.jpg" alt="Team Member 1">
+                        <img class=hashim src="jeeson.jpg" alt="Team Member 1">
                         <div class="hover-info">
-                            <h3>Team Member 1</h3>
+                            <h3>Jeeson</h3>
                             <p>Frontend Developer</p>
                         </div>
                     </div>
@@ -77,14 +77,14 @@
                         <h3>Team Member 1</h3>
                         <h4>Skills</h4>
                         <ul>
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
+                            <li>HTML</li>
+                            <li>C++</li>
+                            <li>Python</li>
                         </ul>
                         <h4>Projects</h4>
                         <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
+                            <li>Grade system</li>
+                            <li>Hello world in html</li>
                         </ul>
                         <button class="close-details">Close</button>
                     </div>
@@ -94,24 +94,24 @@
             <div class="team-member">
                 <div class="member-card">
                     <div class="member-front">
-                        <img class=hashim src="github_profile.jpg" alt="Team Member 1">
+                        <img class=hashim src="athul.jpg" alt="Team Member 1">
                         <div class="hover-info">
-                            <h3>Team Member 1</h3>
-                            <p>Frontend Developer</p>
+                            <h3>ATHUL</h3>
+                            <p>End Developer</p>
                         </div>
                     </div>
                     <div class="member-details">
                         <h3>Team Member 1</h3>
                         <h4>Skills</h4>
                         <ul>
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
+                            <li>HTML</li>
+                            <li>C++</li>
+                            <li>C</li>
                         </ul>
                         <h4>Projects</h4>
                         <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
+                            <li>Hello world in html</li>
+                            <li>Number Guessing game</li>
                         </ul>
                         <button class="close-details">Close</button>
                     </div>
@@ -121,24 +121,24 @@
             <div class="team-member">
                 <div class="member-card">
                     <div class="member-front">
-                        <img class=hashim src="github_profile.jpg" alt="Team Member 1">
+                        <img class=hashim src="madhav.jpg" alt="Team Member 1">
                         <div class="hover-info">
-                            <h3>Team Member 1</h3>
-                            <p>Frontend Developer</p>
+                            <h3>Madhav</h3>
+                            <p>Developer</p>
                         </div>
                     </div>
                     <div class="member-details">
                         <h3>Team Member 1</h3>
                         <h4>Skills</h4>
                         <ul>
-                            <li>HTML/CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
+                            <li>HTML</li>
+                            <li>Pythont</li>
+                            <li>C</li>
                         </ul>
                         <h4>Projects</h4>
                         <ul>
-                            <li>Project 1</li>
-                            <li>Project 2</li>
+                            <li>Bank management system</li>
+                            <li>Hospital management system</li>
                         </ul>
                         <button class="close-details">Close</button>
                     </div>
