--- a/teamdisplay.html
+++ b/teamdisplay.html
@@ -30,167 +30,89 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="team-member">
-            <div class="member-card">
-                <div class="member-front">
-                    <img class=hashim src="github_profile.jpg" alt="Team Member 1">
-                    <div class="hover-info">
-                        <h3>Team Member 1</h3>
-                        <p>Frontend Developer</p>
-                    </div>
+        <div class="profile-card">
+            <div class="profile-content">
+                <div class="profile-image">
+                    <img src="jeeson.jpg" alt="Team Member 1">
                 </div>
-                <div class="member-details">
-                    <h3>Team Member 1</h3>
-                    <h4>Skills</h4>
-                    <ul>
-                        <li>HTML/CSS</li>
-                        <li>JavaScript</li>
-                        <li>React</li>
-                    </ul>
-                    <h4>Projects</h4>
-                    <ul>
-                        <li>Project 1</li>
-                        <li>Project 2</li>
-                    </ul>
-                    <button class="close-details">Close</button>
+                <div class="profile-info">
+                    <h3>Jeeson Paul Ajith</h3>
+                    <p class="role">Frontend Developer</p>
+                    <div class="hover-content">
+                        <p class="brief-bio">Passionate developer</p>
+                        <div class="quick-skills">
+                            <span>React</span>
+                            <span>TypeScript</span>
+                            <span>Node.js</span>
+                        </div>
+                        <button class="view-profile"><a href="profile.html">Full Profile</a></button>
+                    </div>
                 </div>
             </div>
         </div>
 
-            <div class="team-member">
-                <div class="member-card">
-                    <div class="member-front">
-                        <img class=hashim src="khansa.jpg" alt="Team Member 1">
-                        <div class="hover-info">
-                            <h3>KHANSA KUTTI</h3>
-                            <p>Frontend Developer</p>
+        <div class="profile-card">
+            <div class="profile-content">
+                <div class="profile-image">
+                    <img src="khansa.jpg" alt="Team Member 1">
+                </div>
+                <div class="profile-info">
+                    <h3>Khansa Shahan</h3>
+                    <p class="role">Frontend Developer</p>
+                    <div class="hover-content">
+                        <p class="brief-bio">Passionate developer</p>
+                        <div class="quick-skills">
+                            <span>React</span>
+                            <span>TypeScript</span>
+                            <span>Node.js</span>
                         </div>
-                    </div>
-                    <div class="member-details">
-                        <h3>Team Member 1</h3>
-                        <h4>Skills</h4>
-                        <ul>
-                            <li>HTMLS</li>
-                            <li>python</li>
-                            <li>c++</li>
-                        </ul>
-                        <h4>Projects</h4>
-                        <ul>
-                            <li>Simple desktop calc.</li>
-                            <li>Hello worldin html</li>
-                        </ul>
-                        <button class="close-details">Close</button>
+                        <button class="view-profile"><a href="profile.html">Full Profile</a></button>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="team-member">
-                <div class="member-card">
-                    <div class="member-front">
-                        <img class=hashim src="jeeson.jpg" alt="Team Member 1">
-                        <div class="hover-info">
-                            <h3>Jeeson</h3>
-                            <p>Frontend Developer</p>
+        <div class="profile-card">
+            <div class="profile-content">
+                <div class="profile-image">
+                    <img src="madhav.jpg" alt="Team Member 1">
+                </div>
+                <div class="profile-info">
+                    <h3>Madhav R</h3>
+                    <p class="role">Frontend Developer</p>
+                    <div class="hover-content">
+                        <p class="brief-bio">Passionate developer</p>
+                        <div class="quick-skills">
+                            <span>React</span>
+                            <span>TypeScript</span>
+                            <span>Node.js</span>
                         </div>
-                    </div>
-                    <div class="member-details">
-                        <h3>Team Member 1</h3>
-                        <h4>Skills</h4>
-                        <ul>
-                            <li>HTML</li>
-                            <li>C++</li>
-                            <li>Python</li>
-                        </ul>
-                        <h4>Projects</h4>
-                        <ul>
-                            <li>Grade system</li>
-                            <li>Hello world in html</li>
-                        </ul>
-                        <button class="close-details">Close</button>
+                        <button class="view-profile"><a href="profile.html">Full Profile</a></button>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="team-member">
-                <div class="member-card">
-                    <div class="member-front">
-                        <img class=hashim src="athul.jpg" alt="Team Member 1">
-                        <div class="hover-info">
-                            <h3>ATHUL</h3>
-                            <p>End Developer</p>
+        <div class="profile-card">
+            <div class="profile-content">
+                <div class="profile-image">
+                    <img src="athul.jpg" alt="Team Member 1">
+                </div>
+                <div class="profile-info">
+                    <h3>Athul Ajai</h3>
+                    <p class="role">Frontend Developer</p>
+                    <div class="hover-content">
+                        <p class="brief-bio">Passionate developer</p>
+                        <div class="quick-skills">
+                            <span>React</span>
+                            <span>TypeScript</span>
+                            <span>Node.js</span>
                         </div>
-                    </div>
-                    <div class="member-details">
-                        <h3>Team Member 1</h3>
-                        <h4>Skills</h4>
-                        <ul>
-                            <li>HTML</li>
-                            <li>C++</li>
-                            <li>C</li>
-                        </ul>
-                        <h4>Projects</h4>
-                        <ul>
-                            <li>Hello world in html</li>
-                            <li>Number Guessing game</li>
-                        </ul>
-                        <button class="close-details">Close</button>
+                        <button class="view-profile"><a href="profile.html">Full Profile</a></button>
                     </div>
                 </div>
             </div>
-
-            <div class="team-member">
-                <div class="member-card">
-                    <div class="member-front">
-                        <img class=hashim src="madhav.jpg" alt="Team Member 1">
-                        <div class="hover-info">
-                            <h3>Madhav</h3>
-                            <p>Developer</p>
-                        </div>
-                    </div>
-                    <div class="member-details">
-                        <h3>Team Member 1</h3>
-                        <h4>Skills</h4>
-                        <ul>
-                            <li>HTML</li>
-                            <li>Pythont</li>
-                            <li>C</li>
-                        </ul>
-                        <h4>Projects</h4>
-                        <ul>
-                            <li>Bank management system</li>
-                            <li>Hospital management system</li>
-                        </ul>
-                        <button class="close-details">Close</button>
-                    </div>
-                </div>
-            </div>
-
-        <div class="team-member">
-            <div class="member-card">
-                <div class="member-front">
-                    <img class=hashim src="github_profile.jpg" alt="Team Member 1">
-                    <div class="hover-info">
-                        <h3>Team Member 1</h3>
-                        <p>Frontend Developer</p>
-                    </div>
-                </div>
-                <div class="member-details">
-                    <h3>Team Member 1</h3>
-                    <h4>Skills</h4>
-                    <ul>
-                        <li>HTML/CSS</li>
-                        <li>JavaScript</li>
-                        <li>React</li>
-                    </ul>
-                    <h4>Projects</h4>
-                    <ul>
-                        <li>Project 1</li>
-                        <li>Project 2</li>
-                    </ul>
-                    <button class="close-details">Close</button>
-                </div>
-            </div>
+        </div>
         </div>
     </div>
 </div>
