profile page updated

--- a/teamdisplay.html
+++ b/teamdisplay.html
@@ -25,7 +25,7 @@
                                 <span>TypeScript</span>
                                 <span>Node.js</span>
                             </div>
-                            <button class="view-profile"><a href="profile.html">Full Profile</a></button>
+                            <button class="view-profile"><a href="profile-hashim.html">Full Profile</a></button>
                         </div>
                     </div>
                 </div>
