--- a/teamdisplay.html
+++ b/teamdisplay.html
@@ -66,7 +66,7 @@
                             <span>TypeScript</span>
                             <span>Node.js</span>
                         </div>
-                        <button class="view-profile"><a href="profile.html">Full Profile</a></button>
+                        <button class="view-profile"><a href="profile-khansa.html">Full Profile</a></button>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                             <span>TypeScript</span>
                             <span>Node.js</span>
                         </div>
-                        <button class="view-profile"><a href="profile.html">Full Profile</a></button>
+                        <button class="view-profile"><a href="profile-athul.html">Full Profile</a></button>
                     </div>
                 </div>
             </div>
