--- a/teamdisplay.html
+++ b/teamdisplay.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="profile-info">
                     <h3>Madhav R</h3>
-                    <p class="role">Frontend Developer</p>
+                    <p class="role">Developer</p>
                     <div class="hover-content">
                         <p class="brief-bio">Passionate developer</p>
                         <div class="quick-skills">
