--- a/teamdisplay.html
+++ b/teamdisplay.html
@@ -83,9 +83,9 @@
                     <div class="hover-content">
                         <p class="brief-bio">Passionate developer</p>
                         <div class="quick-skills">
-                            <span>React</span>
-                            <span>TypeScript</span>
-                            <span>Node.js</span>
+                            <span>HTML</span>
+                            <span>Python</span>
+                            <span>C</span>
                         </div>
                         <button class="view-profile"><a href="profile-madhav.html">Full Profile</a></button>
                     </div>
@@ -100,13 +100,13 @@
                 </div>
                 <div class="profile-info">
                     <h3>Athul Ajai</h3>
-                    <p class="role">Frontend Developer</p>
+                    <p class="role">CODE SUPPORT</p>
                     <div class="hover-content">
                         <p class="brief-bio">Passionate developer</p>
                         <div class="quick-skills">
-                            <span>React</span>
-                            <span>TypeScript</span>
-                            <span>Node.js</span>
+                            <span>C</span>
+                            <span>HTML</span>
+                            <span>C++</span>
                         </div>
                         <button class="view-profile"><a href="profile-athul.html">Full Profile</a></button>
                     </div>
