--- a/teamdisplay.html
+++ b/teamdisplay.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="team">
+            <h1> TEAM KUNU VAAVAS </h1>
+        </div>
         <div class="team-grid">
             <!-- Team Member Card -->
             <div class="profile-card">
