hashim profile update

--- a/profile-hashim.html
+++ b/profile-hashim.html
@@ -15,7 +15,7 @@
             </div>
             <div class="profile-intro">
                 <h1>Hashm Mohamed T A</h1>
-                <p class="title">Frontend Developer</p>
+                <p class="title">Full Stack Developer</p>
             </div>
         </div>
         
@@ -34,7 +34,7 @@
                             <li>HTML5/CSS3</li>
                             <li>JavaScript/TypeScript</li>
                             <li>React</li>
-                            <li>Vue.js</li>
+                            <li>Java Spring Boot</li>
                         </ul>
                     </div>
                     <!-- Add more skill categories -->
