--- a/teamdisplay.html
+++ b/teamdisplay.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="profile-info">
                         <h3>Hashim Mohamed T A</h3>
-                        <p class="role">Frontend Developer</p>
+                        <p class="role">Full Stack Developer</p>
                         <div class="hover-content">
                             <p class="brief-bio">Passionate developer</p>
                             <div class="quick-skills">
