--- a/profile-athul.html
+++ b/profile-athul.html
@@ -15,7 +15,7 @@
             </div>
             <div class="profile-intro">
                 <h1>Athul Ajai</h1>
-                <p class="title">Frontend Developer</p>
+                <p class="title">Code Support</p>
             </div>
         </div>
         
@@ -29,12 +29,12 @@
                 <h2>Skills</h2>
                 <div class="skills-grid">
                     <div class="skill-item">
-                        <h3>Frontend</h3>
+                        <h3>Code support</h3>
                         <ul>
-                            <li>HTML5/CSS3</li>
-                            <li>JavaScript/TypeScript</li>
-                            <li>React</li>
-                            <li>Vue.js</li>
+                            <li>HTML</li>
+                            <li>Python</li>
+                            <li>C++</li>
+                            <li>C</li>
                         </ul>
                     </div>
                     <!-- Add more skill categories -->
@@ -44,14 +44,14 @@
             <section class="projects">
                 <h2>Projects</h2>
                 <div class="project-grid">
-                    <!-- Project cards go here -->
+                    <!--] Project cards go here -->Number Guessing Game,HELLO WORLD
                 </div>
             </section>
 
             <section class="contact">
                 <h2>Contact</h2>
                 <div class="contact-info">
-                    <!-- Contact information -->
+                    <!-- Contact information -->9946737205
                 </div>
             </section>
         </div>
