--- a/profile-hashim.html
+++ b/profile-hashim.html
@@ -44,14 +44,14 @@
             <section class="projects">
                 <h2>Projects</h2>
                 <div class="project-grid">
-                    <!-- Project cards go here -->
+                    <!-- Project cards go here -->MISSFIT,FYV
                 </div>
             </section>
 
             <section class="contact">
                 <h2>Contact</h2>
                 <div class="contact-info">
-                    <!-- Contact information -->
+                    <!-- Contact information -->7012068896
                 </div>
             </section>
         </div>
