--- a/profile-jeeson.html
+++ b/profile-jeeson.html
@@ -22,18 +22,18 @@
         <div class="profile-body">
             <section class="about">
                 <h2>About</h2>
-                <p>Experienced frontend developer passionate about creating user-friendly web applications...</p>
+                <p>Experienced Backend developer passionate about creating user-friendly web applications...</p>
             </section>
 
             <section class="skills">
                 <h2>Skills</h2>
                 <div class="skills-grid">
                     <div class="skill-item">
-                        <h3>Frontend</h3>
+                        <h3>Backend</h3>
                         <ul>
                             <li>HTML</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
+                            <li>C++</li>
+                            <li>Python</li>
                         </ul>
                     </div>
                     <!-- Add more skill categories -->
@@ -43,11 +43,11 @@
             <section class="projects">
                 <h2>Projects</h2>
                 <div class="project-grid">
-                    <!-- Project cards go here -->
+                    <!-- Project cards go here -->Grade Calculator
                 </div>
             </section>
 
-            <section class="contact">
+            <section class="contact">9746864299
                 <h2>Contact</h2>
                 <div class="contact-info">
                     <!-- Contact information -->
