--- a/profile-khansa.html
+++ b/profile-khansa.html
@@ -15,21 +15,21 @@
             </div>
             <div class="profile-intro">
                 <h1>Khansa Shahan S</h1>
-                <p class="title">Frontend Developer</p>
+                <p class="title">Web Page Designer</p>
             </div>
         </div>
         
         <div class="profile-body">
             <section class="about">
                 <h2>About</h2>
-                <p>Experienced frontend developer passionate about creating user-friendly web applications...</p>
+                <p>Experienced Web Page Designer passionate about creating user-friendly web applications...</p>
             </section>
 
             <section class="skills">
                 <h2>Skills</h2>
                 <div class="skills-grid">
                     <div class="skill-item">
-                        <h3>Frontend</h3>
+                        <h3>Designer</h3>
                         <ul>
                             <li>HTML5/CSS3</li>
                             <li>JavaScript/TypeScript</li>
@@ -51,7 +51,7 @@
             <section class="contact">
                 <h2>Contact</h2>
                 <div class="contact-info">
-                    <!-- Contact information -->
+                    <!-- Contact information -->8590294697
                 </div>
             </section>
         </div>
