--- a/profile-madhav.html
+++ b/profile-madhav.html
@@ -15,7 +15,7 @@
             </div>
             <div class="profile-intro">
                 <h1>Madhav R</h1>
-                <p class="title">Frontend Developer</p>
+                <p class="title">Developer</p>
             </div>
         </div>
         
@@ -43,15 +43,14 @@
             <section class="projects">
                 <h2>Projects</h2>
                 <div class="project-grid">
-                    <!-- Project cards go here -->
+                    <!-- Project cards go here -->Hospital Bank Management 
                 </div>
             </section>
 
             <section class="contact">
                 <h2>Contact</h2>
                 <div class="contact-info">
-                    <!-- Contact information -->
-                </div>
+                    <!-- Contact information -->96458426545                </div>
             </section>
         </div>
     </div>
